--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="content">
             <h2>マーティン・チョップ</h2>
             <h5 style="margin-top:-25px;">(Marcin Czop)</h5>
-            <a href="javascript:;" id="discord" data-clipboard-text="MrTalon63#2137"><img height="48px" src="https://cdn.analitycy.stream/mczop/content/dc.png"></a>
+            <a target="_blank" href="https://discord.gg/hajQcSU"><img height="48px" src="https://cdn.analitycy.stream/mczop/content/dc.png"></a>
             <a style="margin-left: 5px;" href="mailto:wcale.nie.marcin@mczop.co.pl"><img height="48px" src="https://cdn.analitycy.stream/mczop/content/mail.png"></a>
             <a style="margin-left: 5px;" target="_blank" href="https://github.com/MrTalon63"><img height="48px" src="https://cdn.analitycy.stream/mczop/content/github.png"></a>
             <br><br>
